
[TestSet - 1]
{
 "a": 1,
 "b": {
  "c": "2",
  "d": {
   "e": 3,
   "f": true,
   "g": "test"
  }
 }
}
---

[TestSet - 2]
{
 "a": 1,
 "b": {
  "c": "2",
  "d": {
   "e": 3,
   "f": true,
   "g": "hello",
   "r": "test"
  }
 }
}
---

[TestSet - 3]
{
 "a": 1,
 "arr": [
  {
   "key": "test"
  }
 ]
}
---

[TestSet - 4]
{
 "Records": [
  {
   "Record_details": {
    "id": "test",
    "obj": {
     "value": "test"
    }
   }
  }
 ]
}
---
